# linemod

./: CMakeLists.txt  README  package.xml
conf/: detection.apriltags.ros.ork  detection.ros.ork  training.ork
src/: CMakeLists.txt  kinect1_node.cpp  linemod_detect.cpp  linemod_train.cpp
