<package>
  <name>object_recognition_linemod</name>
  <version>0.3.6</version>
  <description>An object recognition pipeline that uses LINE-MOD from OpenCV</description>
  <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  
  <url>https://github.com/wg-perception/linemod</url>

  <build_depend>ecto</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>object_recognition_renderer</build_depend>
  <build_depend>opencv_candidate</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>ecto</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>object_recognition_renderer</run_depend>
  <run_depend>opencv_candidate</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
